fix email templates and database issues

--- a/app/templates/databaselow.html
+++ b/app/templates/databaselow.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1 style="text-align: center;">URGENT: KRS MASTER KEY DATABASE LOW</h1>
-<h3>The master key database has {{:availableKeys}} available keys remaining. If this number is depleted, the service will be unavailable for all new customers, as well as customers opening their first wallet of a specific coin. Please use the KRS Admin CLI tool to import new public keys ASAP.</h3>
+<h3>The master key database has {{:availableKeys}} available <b>{{:type}}</b> keys remaining. If this number is depleted, the service will be unavailable for all new customers, as well as customers opening their first wallet of a specific coin. Please use the KRS Admin CLI tool to import new public keys ASAP.</h3>
 </body>
 </html>
