--- a/app/templates/newkeytemplate.html
+++ b/app/templates/newkeytemplate.html
@@ -19,7 +19,7 @@
 <h3><strong>The Backup Key Generated</strong></h3>
 <p>
     <span style="line-height: 1.5em;">The backup public key generated for you is:</span>
-    <span style="line-height: 1.5em; text-decoration: underline"><strong><span style="color: rgb(0, 0, 205);">{{:xpub}}</span></strong>.</span>
+    <span style="line-height: 1.5em; text-decoration: underline"><strong><span style="color: rgb(0, 0, 205);">{{:pub}}</span></strong>.</span>
     <br/>
 </p>
 <h3><strong>Enhanced Security</strong></h3>
