Updated email template

--- a/app/templates/newkeytemplate.html
+++ b/app/templates/newkeytemplate.html
@@ -1,37 +1,77 @@
 <html>
 <head>
-    <title>Your backup recovery key has been provisioned on {{:servicename}}</title>
+    <title>Digital Asset Services - Setup your Vault</title>
 </head>
-<body>
-<h1 style="text-align: center;">{{:servicename}} will keep your backup key safe.</h1>
-<h3>Hello,</h3>
-<p>
-    You are receiving this email because a wallet has been created for you on BitGo.
-    BitGo uses a trust-less 2 of 3 wallet model where only you have control of the funds secured on the blockchain.
-    You hold the user key and co-sign with BitGo for transactions.
-    <span style="line-height: 1.5em;">{{:servicename}} will hold your final backup key for you in cold storage to be used under the following circumstances:</span>
+<body style="background-color:#F9F9F9;">
+
+<div style="margin: 20px;background-color: #FFFFFF;min-width:300px;padding:40px;border-width:1px; border-style:solid; border-radius:10px; border-color:rgba(0, 0, 0, 0.125)">
+
+<h1 align="center" style="font-family: Avenir Next,Arial,sans-serif;color:#262E32;padding-top:20px;">Digital Asset Services <br>Setup your Vault</h1>
+  <br>
+
+<p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">Thanks for choosing Digital Asset Services to hold your backup key.</p>
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+
+If this is the first time that you have chosen us then we need you to setup your Vault so that in the event that you need to us, we can verify you quickly.<br><br>
+   <strong>Get up and running in minutes. <br> Spend 5 minutes now to save days later!!!</strong>
 </p>
-<ul>
-    <li>You misplace your recovery keycard and forget your BitGo password. </li>
-    <li>BitGo becomes inaccessible.</li>
-</ul>
-<p>Please visit us at <a href="{{:serviceurl}}">{{:serviceurl}}</a> for more information. </p>
-<h3><strong>The Backup Key Generated</strong></h3>
-<p>
-    <span style="line-height: 1.5em;">The backup public key generated for you is:</span>
-    <span style="line-height: 1.5em; text-decoration: underline"><strong><span style="color: rgb(0, 0, 205);">{{:pub}}</span></strong>.</span>
-    <br/>
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+All you need before you begin is a form of photo ID like a passport or driving license and Google Authenticator on your phone.
 </p>
-<h3><strong>Enhanced Security</strong></h3>
-<p><span style="line-height: 1.5em;">We recommend you take the following steps to enhance the security of your wallet:</span></p>
-<ol>
-    <li>Verify the value of your public key above with that on the backup section of your BitGo keycard. This validates that the key was not changed in transit. </li>
-    <li>Upgrade your backup verification requirements by contacting us at <a href="mailto:{{:adminemail}}">{{:adminemail}}</a> and sending us more documentation to associate your identity with. We will require this documentation in the case of a recovery event. </li>
-</ol>
-<br/>
-<p>
-    <span style="line-height: 1.5em;">Regards,<br/></span>
-    {{:servicename}}
+
+
+<h2 align="center" style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+Click <a href="https://vault.digitalassetservices.io" target="_blank" style="text-decoration: none; color: #6968F6;">HERE</a> to set up your Vault now
+</h2>
+
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+If you already have a Vault Account with us, our system will have automatically registered your new wallet and you don't need to do anything.
 </p>
+
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+We are pleased to help you protect your digital assets.
+</p>
+<br>
+
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+<strong>David Janczewski</strong>
+<br>
+<br>
+CEO
+<br>
+Digital Asset Services
+</p>
+
+</div>
+<br>
+
+<div style="margin:20px;background-color: #FFFFFF; min-width:300px;padding:40px;border-width:1px; border-style:solid; border-radius:10px; border-color:rgba(0, 0, 0, 0.125)">
+<h4 style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;"> Backup Key Check </h4>
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+  The following backup public key has been provided to BitGo and should match the key provided in <strong>Box B</strong> on your BitGo keycard. <br>
+</p>
+
+<br>
+<span style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;line-height: 1.5em; text-decoration: none "><span>{{:pub}}</span>.</span>
+<br>
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
+If these keys do not match then please contact <a href="mailto:support@digitalassetservices.io">support@digitalassetservices.io</a> before using your wallet.
+</p>
+</div>
+
+<br>
+<br>
+
+<p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;font-size:0.8em;">
+Digital Asset Services Ltd is an Appointed Representative (FRN: 829262) of HPIG Services Ltd, an independent and fully authorised intermediary regulated by the Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 790558. HPIG Services Ltd is registered in England and Wales under company number 10981897 and its registered office is at 8 Greencoat Place, London SW1P 1PL. Your policy is underwritten by Aspen Insurance UK Limited (Aspen), for whom HPIG Services Ltd/Digital Asset Services Ltd acts as agent in performing its duties. Aspen is authorised and regulated by the Prudential Regulation Authority and Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 202644. Its registered office is 30 Fenchurch Street, London EC3M 3BD and its company number is 01184193. If you have received this email in error, please notify info@digitalassetservices.io and delete all copies from your system. You should not retain the e-mail or disclose its contents to anyone.
+</p>
+<br>
+
 </body>
 </html>
