Updated URL to point at the sign up page

--- a/app/templates/newkeytemplate.html
+++ b/app/templates/newkeytemplate.html
@@ -23,7 +23,7 @@ All you need before you begin is a form of photo ID like a passport or driving l
 
 
 <h2 align="center" style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-Click <a href="https://vault.digitalassetservices.io" target="_blank" style="text-decoration: none; color: #6968F6;">HERE</a> to set up your Vault now
+Click <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none; color: #6968F6;">HERE</a> to set up your Vault now
 </h2>
 
 
