--- a/app/templates/existingUserNewKeyTemplate-testnet.html
+++ b/app/templates/existingUserNewKeyTemplate-testnet.html
@@ -15,57 +15,18 @@
         <div style="margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Digital Asset Services to hold your backup key. If you ever need to recover your funds, you must be registered with us.</p>
+              Thanks for choosing Digital Asset Services to hold your backup key. <br>
+              <strong>Please note recoveries are NOT supported on TESTNET.</strong></p>
+
+              <div align="center">
+                <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block;">
+                  <a href="https://www.digitalassetservices.io" target="_blank" style="text-decoration: none;color: white;">
+                    For more information visit our website
+                  </a>
+                </h1>
+              </div>
 
 
-            <div align="center">
-              <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block;">
-                <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none;color: white;">
-                  Protect your backup key now
-                </a>
-              </h1>
-            </div>
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        <strong>
-        Register within the next 24 hours and get your first recovery FREE.
-        </strong></p>
-
-
-          <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-          <strong> What you'll need: </strong>Your photo ID like a drivers licence or passport.
-          </p>
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-
-
-
-
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        If you already have a Vault Account with us, our system will have automatically registered your new wallet and you don't need to do anything.
-        </p>
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        We are pleased to help you protect your digital assets.
-        </p>
-        <br>
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        <strong>David Janczewski</strong>
-        <br>
-        <br>
-        CEO
-        <br>
-        Digital Asset Services
-        </p>
-      </div>
-        <br>
 
         <hr style="margin: 20px;border: 2px solid #EAEEF3; border-bottom: 0; margin: 20px;">
 
