--- a/app/templates/newkeytemplate-testnet.html
+++ b/app/templates/newkeytemplate-testnet.html
@@ -26,8 +26,7 @@
                 </h1>
               </div>
 
-
-
+        </div>
         <hr style="margin: 20px;border: 2px solid #EAEEF3; border-bottom: 0; margin: 20px;">
 
       <div style="margin:20px;">
