Updated email copy and title

--- a/app/templates/existingUserNewKeyTemplate-testnet.html
+++ b/app/templates/existingUserNewKeyTemplate-testnet.html
@@ -27,7 +27,7 @@
               </div>
 
 
-
+        </div>
         <hr style="margin: 20px;border: 2px solid #EAEEF3; border-bottom: 0; margin: 20px;">
 
       <div style="margin:20px;">
