--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -15,17 +15,16 @@
         <div style="margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Digital Asset Services to hold your backup key. If you ever need to recover your funds, you must be registered with us.</p>
+              Thanks for choosing Digital Asset Services to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
 
 
             <div align="center">
               <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block;">
                 <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none;color: white;">
-                  Protect your backup key now
+                  Protect your BitGo wallet now
                 </a>
               </h1>
             </div>
-
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         <strong>
