Updated email templates

--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -8,20 +8,21 @@
     <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
   </xml><![endif]-->
-    <title>Digital Asset Services - Protect your backup key now</title>
+    <title>Coincover by Digital Asset Services - Protect your backup key now</title>
   </head>
     <body style="min-width:300px;">
 
         <div style="margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Digital Asset Services to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
+              Thanks for choosing Coincover by Digital Asset Services to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
 
 
             <div align="center">
-              <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block;">
-                <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none;color: white;">
-                  Protect your BitGo wallet now
+              <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 7px; background-color: #5484FC;color: white; padding:10px 20px; text-align: center; display: inline-block; border: none;">
+              <!-- <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block; border: 0px solid;"> -->
+                <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none; color: white;">
+                  Click to Protect your BitGo wallet now
                 </a>
               </h1>
             </div>
@@ -40,29 +41,13 @@
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
 
 
-
-
-
-
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         If you already have a Vault Account with us, our system will have automatically registered your new wallet and you don't need to do anything.
         </p>
 
 
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        We are pleased to help you protect your digital assets.
-        </p>
         <br>
 
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        <strong>David Janczewski</strong>
-        <br>
-        <br>
-        CEO
-        <br>
-        Digital Asset Services
-        </p>
       </div>
         <br>
 
@@ -79,7 +64,7 @@
           <span style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;line-height: 1.5em; text-decoration: none "><span>{{:pub}}</span>.</span>
           <br>
           <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-          If these keys do not match then please contact <a href="mailto:support@digitalassetservices.io">support@digitalassetservices.io</a> before using your wallet.
+          If these keys do not match then please contact <a href="mailto:support@coincover.com">support@coincover.com</a> before using your wallet.
           </p>
         </div>
           <br>
@@ -90,7 +75,7 @@
         <div style="min-width:300px;margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;font-size:0.8em;">
-          Digital Asset Services Ltd is an Appointed Representative (FRN: 829262) of HPIG Services Ltd, an independent and fully authorised intermediary regulated by the Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 790558. HPIG Services Ltd is registered in England and Wales under company number 10981897 and its registered office is at 8 Greencoat Place, London SW1P 1PL. Your policy is underwritten by Aspen Insurance UK Limited (Aspen), for whom HPIG Services Ltd/Digital Asset Services Ltd acts as agent in performing its duties. Aspen is authorised and regulated by the Prudential Regulation Authority and Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 202644. Its registered office is 30 Fenchurch Street, London EC3M 3BD and its company number is 01184193. If you have received this email in error, please notify info@digitalassetservices.io and delete all copies from your system. You should not retain the e-mail or disclose its contents to anyone.
+          Digital Asset Services Ltd (trading as Coincover) is an Appointed Representative (FRN: 829262) of HPIG Services Ltd, an independent and fully authorised intermediary regulated by the Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 790558. HPIG Services Ltd is registered in England and Wales under company number 10981897 and its registered office is at 8 Greencoat Place, London SW1P 1PL. Your policy is underwritten by Aspen Insurance UK Limited (Aspen), for whom HPIG Services Ltd/Digital Asset Services Ltd (trading as Coincover) acts as agent in performing its duties. Aspen is authorised and regulated by the Prudential Regulation Authority and Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 202644. Its registered office is 30 Fenchurch Street, London EC3M 3BD and its company number is 01184193. If you have received this email in error, please notify info@digitalassetservices.io and delete all copies from your system. You should not retain the e-mail or disclose its contents to anyone.
           </p>
 
         </div>
