Update emails to remove DAS

--- a/app/templates/existingUserNewKeyTemplate-testnet.html
+++ b/app/templates/existingUserNewKeyTemplate-testnet.html
@@ -8,14 +8,14 @@
     <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
   </xml><![endif]-->
-    <title>Coincover by Digital Asset Services - Protect your backup key now</title>
+    <title>Coincover - Protect your backup key now</title>
   </head>
     <body style="min-width:300px;">
 
         <div style="margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Coincover by Digital Asset Services to hold your BitGo wallet backup key. <br><strong>Please note recoveries are NOT supported on TESTNET.</strong></p>
+              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong>Please note recoveries are NOT supported on TESTNET.</strong></p>
 
 
             <div align="center">
