--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -8,20 +8,20 @@
     <o:PixelsPerInch>96</o:PixelsPerInch>
    </o:OfficeDocumentSettings>
   </xml><![endif]-->
-    <title>Coincover by Digital Asset Services - Protect your backup key now</title>
+    <title>Coincover - Protect your backup key now</title>
   </head>
     <body style="min-width:300px;">
 
         <div style="margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Coincover by Digital Asset Services to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
+              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
 
 
             <div align="center">
               <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 7px; background-color: #5484FC;color: white; padding:10px 20px; text-align: center; display: inline-block; border: none;">
               <!-- <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block; border: 0px solid;"> -->
-                <a href="https://vault.digitalassetservices.io/signup" target="_blank" style="text-decoration: none; color: white;">
+                <a href="https://vault.coincover.com/signup" target="_blank" style="text-decoration: none; color: white;">
                   Click to Protect your BitGo wallet now
                 </a>
               </h1>
