Updated email copy

--- a/app/templates/newkeytemplate.html
+++ b/app/templates/newkeytemplate.html
@@ -29,20 +29,18 @@
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         <strong>
-        Register within the next 24 hours and get your first recovery FREE.
+          Register today for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.
+
         </strong></p>
 
 
-          <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-          <strong> What you'll need: </strong>Your photo ID like a drivers licence or passport.
-          </p>
-
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
 
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        If you already have a Vault Account with us, our system will have automatically registered your new wallet and you don't need to do anything.
+          If you are already registered with Coincover, there’s no more to do because we will cover your new wallet automatically.
+
         </p>
 
 
@@ -75,7 +73,7 @@
         <div style="min-width:300px;margin: 20px;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;font-size:0.8em;">
-          Copyright © Digital Asset Services (trading as Coincover) 2019. Digital Asset Services Ltd (trading as Coincover) is registered in England and Wales under company number 11356137 and its registered office is at Capital Building, Tyndall Street, Cardiff, CF10 4AZ. It is an Appointed Representative (FRN: 829262) of HPIG Services Limited, an independent and fully authorised intermediary regulated by the Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 790558. HPIG Insurance Limited is registered in England and Wales under company number 10981897 and its registered office is at 8 Greencoat Place, London SW1P 1PL.
+          Digital Asset Services Ltd (trading as Coincover) is an Appointed Representative (FRN: 829262) of HPIG Services Ltd, an independent and fully authorised intermediary regulated by the Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 790558. HPIG Services Ltd is registered in England and Wales under company number 10981897 and its registered office is at 8 Greencoat Place, London SW1P 1PL. Your policy is underwritten by Aspen Insurance UK Limited (Aspen), for whom HPIG Services Ltd/Digital Asset Services Ltd (trading as Coincover) acts as agent in performing its duties. Aspen is authorised and regulated by the Prudential Regulation Authority and Financial Conduct Authority. It is entered on the FCA register (www.fca.org.uk/register) under reference 202644. Its registered office is 30 Fenchurch Street, London EC3M 3BD and its company number is 01184193. If you have received this email in error, please notify info@digitalassetservices.io and delete all copies from your system. You should not retain the e-mail or disclose its contents to anyone.
           </p>
 
         </div>
