--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -29,20 +29,18 @@
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         <strong>
-        Register within the next 24 hours and get your first recovery FREE.
+          Register today for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.
+
         </strong></p>
 
 
-          <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-          <strong> What you'll need: </strong>Your photo ID like a drivers licence or passport.
-          </p>
-
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
 
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-        If you already have a Vault Account with us, our system will have automatically registered your new wallet and you don't need to do anything.
+          If you are already registered with Coincover, there’s no more to do because we will cover your new wallet automatically.
+
         </p>
 
 
