--- a/app/templates/newkeytemplate.html
+++ b/app/templates/newkeytemplate.html
@@ -13,13 +13,14 @@
     <body style="min-width:300px;">
 
         <div style="margin: 20px;">
+        <img src="https://images.squarespace-cdn.com/content/v1/5cadc9e9b2cf795c60391b3d/1558013705677-B5JOO8IYP7WGWW3ZAH7H/ke17ZwdGBToddI8pDm48kJ3hk_4kAvCD9YU9tyYtLJpZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVF4eNfrhkVl-MN6toKiTNONrNGGlUtYqY9M2kammdPP-TFvbuqF0GUInBxxtVhBOn4/logo-white-text-navy-bg%402x.png?format=750w" alt="Coincover" style="display: block; margin-left: auto;margin-right: auto;width: 40%;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong>You must be registered with us to recover your funds.</strong></p>
+              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong><span style="color: #5484FC;">Register today</span> for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.</strong></p>
 
 
             <div align="center">
-              <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 7px; background-color: #5484FC;color: white; padding:10px 20px; text-align: center; display: inline-block; border: none;">
+              <h1 style="line-height: 1.1em;font-family: Avenir Next,Arial,sans-serif;border-radius: 7px; background-color: #5484FC;color: white; padding:10px 20px; text-align: center; display: inline-block; border-right-style: solid;border-bottom-style: solid; border-color:#112748;">
               <!-- <h1 style="line-height: 1.25em;font-family: Avenir Next,Arial,sans-serif;border-radius: 50px; background-color: #4CAF50; /* Green */border: none; color: white; padding: 15px 32px; text-align: center; display: inline-block; border: 0px solid;"> -->
                 <a href="https://vault.coincover.com/signup" target="_blank" style="text-decoration: none; color: white;">
                   Click to Protect your BitGo wallet now
@@ -29,7 +30,7 @@
 
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         <strong>
-          Register today for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.
+          You must be registered with us to recover your funds.
 
         </strong></p>
 
