--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -16,7 +16,7 @@
         <img src="https://images.squarespace-cdn.com/content/v1/5cadc9e9b2cf795c60391b3d/1558013705677-B5JOO8IYP7WGWW3ZAH7H/ke17ZwdGBToddI8pDm48kJ3hk_4kAvCD9YU9tyYtLJpZw-zPPgdn4jUwVcJE1ZvWEtT5uBSRWt4vQZAgTJucoTqqXjS3CfNDSuuf31e0tVF4eNfrhkVl-MN6toKiTNONrNGGlUtYqY9M2kammdPP-TFvbuqF0GUInBxxtVhBOn4/logo-white-text-navy-bg%402x.png?format=750w" alt="Coincover" style="display: block; margin-left: auto;margin-right: auto;width: 40%;">
 
           <p style="font-family: Avenir Next,Arial,sans-serif; padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong><span style="color: #5484FC;">Register today</span> for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.</strong></p>
+              Thanks for choosing Coincover to hold your BitGo wallet backup key. <br><strong><span style="color: #5484FC;"><br>Register today</span> for unlimited lost key recovery and get $10,000 cryptocurrency theft cover FREE for three months.</strong></p>
 
 
             <div align="center">
@@ -31,25 +31,13 @@
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
         <strong>
           You must be registered with us to recover your funds.
-
         </strong></p>
-
-
-
-        <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
-
-
         <p style="font-family: Avenir Next,Arial,sans-serif;padding-left:0.5rem;padding-right:0.5rem;padding-top:7px;padding-bottom:7px;">
           If you are already registered with Coincover, there’s no more to do because we will cover your new wallet automatically.
-
         </p>
-
-
-        <br>
 
       </div>
         <br>
-
         <hr style="margin: 20px;border: 2px solid #EAEEF3; border-bottom: 0; margin: 20px;">
 
       <div style="margin:20px;">
