--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -429,7 +429,7 @@
 <p style="font-size: 12px; line-height: 18px; margin: 0;"> </p>
 <p style="font-size: 12px; line-height: 24px; margin: 0;"><span style="font-size: 16px;">The following backup public key has been provided to BitGo and should match the key provided in </span><strong><span style="font-size: 16px; line-height: 24px;">Box B</span></strong><span style="font-size: 16px; line-height: 24px;"> on your BitGo keycard.</span></p>
 <p style="font-size: 12px; line-height: 18px; margin: 0;"> </p>
-<p style="font-size: 12px; line-height: 24px; margin: 0;"><span style="font-size: 16px;">KEYYYYYY</span></p>
+<p style="font-size: 12px; line-height: 24px; margin: 0;"><span style="font-size: 16px;">{{:pub}}</span></p>
 <p style="font-size: 12px; line-height: 18px; margin: 0;"> </p>
 <p style="font-size: 12px; line-height: 24px; margin: 0;"><span style="font-size: 16px;">If these keys do not match then please contact <a href="mailto:support@coincover.com" rel="noopener" style="text-decoration: underline; color: #0068A5;" target="_blank">support@coincover.com</a> before using your wallet.</span></p>
 <p style="font-size: 12px; line-height: 18px; text-align: justify; margin: 0;"> </p>
