--- a/app/templates/newkeytemplate-testnet.html
+++ b/app/templates/newkeytemplate-testnet.html
@@ -631,23 +631,6 @@ This is just one of the many benefits to being a&nbsp;Coincover&nbsp;customer, b
 				<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
-                <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
-                    <tbody><tr>
-
-                        <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-
-                            <p>Here's a reminder of what you are getting as a Coincover customer:</p>
-
-<ul>
-	<li>Lifetime key storage</li>
-	<li>Key recovery ($99 value)</li>
-	<li>Insurance-backed theft cover up to $1,000 ($24 value)</li>
-	<li data-mce-style="font-size: 14px; line-height: 21px;">Optional insurance-backed theft cover above $1,000</li>
-</ul>
-
-                        </td>
-                    </tr>
-                </tbody></table>
 				<!--[if mso]>
 				</td>
 				<![endif]-->
@@ -676,7 +659,11 @@ This is just one of the many benefits to being a&nbsp;Coincover&nbsp;customer, b
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            In partnership with&nbsp;<strong>BitGo</strong>,&nbsp;<strong>Coincover</strong>&nbsp;is there for you. Theft and lost key protection for your cryptocurrency, complete peace of mind for you. We guarantee we pay out if your cryptocurrency is stolen.&nbsp;For more details, visit www.coincover.com
+                          In partnership with&nbsp;<strong>BitGo</strong>,&nbsp;<strong>Coincover</strong>&nbsp;is there for you. As well as lifetime secure key storage, here's a reminder of another great service available to you as a Coincover customer.&nbsp;
+                          <br><br>
+                          <strong>Comprehensive Cover</strong> - insurance-backed loss and theft cover for your cryptocurrency, complete peace of mind for you. We guarantee we pay out if your cryptocurrency is stolen. Prices start from as little as $9 per month and you can pay annually in Bitcoin.
+                          <br><br>
+                          For more details, visit www.coincover.com
                         </td>
                     </tr>
                 </tbody></table>
