Updated email copy

--- a/app/templates/existingUserNewKeyTemplate.html
+++ b/app/templates/existingUserNewKeyTemplate.html
@@ -957,8 +957,7 @@
 
                         <td class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;" valign="top">
 
-                            <em>Copyright © 2019 Coinciver, All rights reserved.</em><br>
-<br>
+                            <em>Copyright © 2019 Coincover, All rights reserved.</em>
                         </td>
                     </tr>
                 </tbody></table>
